feat: add cloudflare purging cache

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,8 @@ S3_ENDPOINT=XXX
 S3_ACCESS_KEY=XXX
 S3_SECRET_ACCESS_KEY=XXX
 S3_REGION=XXX
+
+# If you want to use traefik uncomment this line
+# TRAEFIK_URL=XXX
+# CF_DNS_API_TOKEN=XXX
+# CF_ZONE_ID=XXX
