fix: add pull on ssh

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,13 +77,14 @@ jobs:
           script: |
             cd $DIRECTORY
 
+            git pull origin main
+
             docker compose \
               -p "${PROJECT_NAME}" \
               pull
 
             docker compose \
               -p "${PROJECT_NAME}" \
-              --env-file $RUNTIME_ENV_FILE \
               up -d --remove-orphans
 
             docker image prune -f
