--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   alfanjauhari_com_app:
-    image: alfanjauhari/alfanjauhari-com
+    image: alfanjauhari/alfanjauhari-com:main
     container_name: alfanjauhari_com_app
     env_file: $RUNTIME_ENV_FILE
     ports:
