fix: wrong env file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   alfanjauhari_com_app:
     image: alfanjauhari/alfanjauhari-com:main
     container_name: alfanjauhari_com_app
+    env_file: $RUNTIME_ENV_FILE
     ports:
       - :3000
     volumes:
