feat: upgrade nextjs and add analytics

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/libs/content-schema.ts"
+    "src/libs/content-schema.ts",
+    "src/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
