--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.4.6",
+    "@next/mdx": "15.5.0",
     "@payloadcms/db-postgres": "^3.52.0",
     "@payloadcms/email-resend": "^3.52.0",
     "@payloadcms/next": "^3.52.0",
@@ -34,11 +34,11 @@
     "graphql": "^16.11.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.539.0",
-    "next": "^15.4.6",
+    "next": "15.5.0",
     "payload": "^3.52.0",
     "pg": "^8.16.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-hook-form": "^7.62.0",
     "rehype-pretty-code": "^0.14.1",
     "rehype-slug": "^6.0.0",
@@ -55,11 +55,15 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.11",
+    "@types/react-dom": "19.1.7",
     "shiki": "^3.9.2",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.11",
+    "@types/react-dom": "19.1.7"
   }
 }
