--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.30.0",
     "drizzle-orm": "^0.39.0",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
     "nitro": "latest",
