feat: add content collections

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "@unpic/react": "^1.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.30.0",
@@ -47,9 +48,13 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
+    "@content-collections/core": "^0.12.0",
+    "@content-collections/mdx": "^0.2.2",
+    "@content-collections/vite": "^0.2.7",
     "@fontsource-variable/inter": "^5.2.8",
     "@fontsource-variable/jetbrains-mono": "^5.2.8",
     "@fontsource-variable/playfair-display": "^5.2.8",
+    "@shikijs/rehype": "^3.19.0",
     "@tailwindcss/typography": "^0.5.19",
     "@tanstack/devtools-vite": "^0.3.11",
     "@testing-library/dom": "^10.4.0",
