--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite dev --port 3000",
     "build": "vite build",
+    "build:content": "content-collections build",
     "serve": "vite preview",
     "test": "vitest run",
     "format": "biome format",
@@ -17,6 +18,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^2.20.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-core": "^0.13.8",
@@ -48,6 +50,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
+    "@content-collections/cli": "^0.1.7",
     "@content-collections/core": "^0.12.0",
     "@content-collections/mdx": "^0.2.2",
     "@content-collections/vite": "^0.2.7",
