--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,9 @@
       ],
       "content-collections": [
         "./.content-collections/generated"
+      ],
+      "~/*": [
+        "./content/*"
       ]
     }
   }
