--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev --port 3000",
+    "start": "node .output/server/index.mjs",
     "build": "vite build",
     "build:content": "content-collections build",
     "serve": "vite preview",
@@ -23,8 +24,12 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-core": "^0.13.8",
     "@tailwindcss/vite": "^4.0.6",
+    "@takumi-rs/core": "^0.57.3",
+    "@takumi-rs/image-response": "^0.57.3",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-form": "^1.0.0",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/react-router-ssr-query": "^1.131.7",
@@ -59,6 +64,7 @@
     "@fontsource-variable/playfair-display": "^5.2.8",
     "@shikijs/rehype": "^3.19.0",
     "@tailwindcss/typography": "^0.5.19",
+    "@takumi-rs/core-darwin-arm64": "^0.57.3",
     "@tanstack/devtools-vite": "^0.3.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
