feat: add docker

--- a/biome.json
+++ b/biome.json
@@ -13,7 +13,8 @@
       "**/index.html",
       "**/vite.config.ts",
       "!**/src/routeTree.gen.ts",
-      "!**/src/styles.css"
+      "public/scripts/**/*.js",
+      "**/generate-og.tsx"
     ]
   },
   "formatter": {
