--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite dev --port 3000",
+    "dev": "pnpm build:og && vite dev --port 3000",
     "start": "node .output/server/index.mjs",
-    "build": "vite build",
+    "build": "pnpm build:content && pnpm build:og && vite build",
     "build:content": "content-collections build",
+    "build:og": "tsx ./generate-og.tsx",
     "serve": "vite preview",
     "test": "vitest run",
     "format": "biome format",
@@ -64,7 +65,7 @@
     "@fontsource-variable/playfair-display": "^5.2.8",
     "@shikijs/rehype": "^3.19.0",
     "@tailwindcss/typography": "^0.5.19",
-    "@takumi-rs/core-darwin-arm64": "^0.57.3",
+    "@takumi-rs/helpers": "^0.57.3",
     "@tanstack/devtools-vite": "^0.3.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
