--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,20 +36,20 @@ jobs:
       - name: Setup docker build
         uses: docker/setup-buildx-action@v3
 
-      - name: Cache
-        uses: actions/cache@v4
-        id: cache
-        with:
-          path: pnpm-store
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+      # - name: Cache
+      #   uses: actions/cache@v4
+      #   id: cache
+      #   with:
+      #     path: pnpm-store
+      #     key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
 
-      - name: Restore Docker cache mounts
-        uses: reproducible-containers/buildkit-cache-dance@v3
-        with:
-          builder: ${{ steps.setup-buildx.outputs.name }}
-          cache-dir: pnpm-store
-          dockerfile: Dockerfile
-          skip-extraction: ${{ steps.cache.outputs.cache-hit }}
+      # - name: Restore Docker cache mounts
+      #   uses: reproducible-containers/buildkit-cache-dance@v3
+      #   with:
+      #     builder: ${{ steps.setup-buildx.outputs.name }}
+      #     cache-dir: pnpm-store
+      #     dockerfile: Dockerfile
+      #     skip-extraction: ${{ steps.cache.outputs.cache-hit }}
 
       - name: Build
         uses: docker/build-push-action@v6
