--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "pnpm build:og && vite dev --port 3000",
+    "dev": "pnpm build:content && pnpm build:og && vite dev --port 3000",
     "start": "node .output/server/index.mjs",
     "build": "pnpm build:content && pnpm build:og && vite build",
     "build:content": "content-collections build",
@@ -26,7 +26,6 @@
     "@t3-oss/env-core": "^0.13.8",
     "@tailwindcss/vite": "^4.0.6",
     "@takumi-rs/core": "^0.57.3",
-    "@takumi-rs/image-response": "^0.57.3",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-form": "^1.0.0",
     "@tanstack/react-query": "^5.90.12",
@@ -41,8 +40,10 @@
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.30.0",
     "drizzle-orm": "^0.39.0",
+    "ipx": "^3.1.1",
     "lenis": "^1.3.15",
     "lucide-react": "^0.554.0",
+    "mime": "^4.1.0",
     "motion": "^12.23.24",
     "nitro": "latest",
     "pg": "^8.11.0",
@@ -51,6 +52,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.3.6",
+    "unpic": "^4.2.2",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^4.1.11"
   },
