fix: add sharp lib

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "pg": "^8.11.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.3.6",
@@ -83,5 +84,13 @@
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0"
+  },
+  "pnpm": {
+    "supportedArchitectures": {
+      "os": ["linux"],
+      "cpu": ["x64", "arm64"],
+      "libc": ["musl"]
+    },
+    "ignoredBuiltDependencies": ["sharp"]
   }
 }
