--- a/package.json
+++ b/package.json
@@ -12,12 +12,7 @@
     "test": "vitest run",
     "format": "biome format",
     "lint": "biome lint",
-    "check": "biome check",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:pull": "drizzle-kit pull",
-    "db:studio": "drizzle-kit studio"
+    "check": "biome check"
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^2.20.0",
@@ -27,7 +22,6 @@
     "@tailwindcss/vite": "^4.0.6",
     "@takumi-rs/core": "^0.57.3",
     "@tanstack/react-devtools": "^0.7.0",
-    "@tanstack/react-form": "^1.0.0",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
     "@tanstack/react-router": "^1.132.0",
@@ -38,15 +32,12 @@
     "@unpic/react": "^1.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-kit": "^0.30.0",
-    "drizzle-orm": "^0.39.0",
     "ipx": "^3.1.1",
     "lenis": "^1.3.15",
     "lucide-react": "^0.554.0",
     "mime": "^4.1.0",
     "motion": "^12.23.24",
     "nitro": "latest",
-    "pg": "^8.11.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "sharp": "^0.34.5",
@@ -73,7 +64,6 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^22.10.2",
-    "@types/pg": "^8.10.0",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
@@ -87,10 +77,19 @@
   },
   "pnpm": {
     "supportedArchitectures": {
-      "os": ["linux"],
-      "cpu": ["x64", "arm64"],
-      "libc": ["musl"]
+      "os": [
+        "linux"
+      ],
+      "cpu": [
+        "x64",
+        "arm64"
+      ],
+      "libc": [
+        "musl"
+      ]
     },
-    "ignoredBuiltDependencies": ["sharp"]
+    "ignoredBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
