--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,8 @@
       "**/vite.config.ts",
       "!**/src/routeTree.gen.ts",
       "public/scripts/**/*.js",
-      "**/generate-og.tsx"
+      "**/generate-og.tsx",
+      "plugins/**/*.ts"
     ]
   },
   "formatter": {
