--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "dev": "pnpm build:content && pnpm build:og && vite dev --port 3000",
     "start": "node .output/server/index.mjs",
-    "build": "pnpm build:content && pnpm build:og && vite build",
+    "build": "pnpm build:content && pnpm build:og && vite build && pnpm upload",
     "build:content": "content-collections build",
     "build:og": "tsx ./scripts/generate-og.tsx",
+    "upload": "tsx ./scripts/upload-assets.ts",
     "serve": "vite preview",
     "test": "vitest run",
     "format": "biome format",
@@ -20,7 +21,6 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-core": "^0.13.8",
     "@tailwindcss/vite": "^4.0.6",
-    "@takumi-rs/core": "^0.57.3",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
@@ -32,7 +32,6 @@
     "@unpic/react": "^1.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "ipx": "^3.1.1",
     "lenis": "^1.3.15",
     "lucide-react": "^0.554.0",
     "mime": "^4.1.0",
@@ -40,11 +39,9 @@
     "nitro": "latest",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "sharp": "^0.34.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.3.6",
-    "unpic": "^4.2.2",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^4.1.11"
   },
@@ -59,6 +56,7 @@
     "@fontsource-variable/playfair-display": "^5.2.8",
     "@shikijs/rehype": "^3.19.0",
     "@tailwindcss/typography": "^0.5.19",
+    "@takumi-rs/core": "^0.57.3",
     "@takumi-rs/helpers": "^0.57.3",
     "@tanstack/devtools-vite": "^0.3.11",
     "@testing-library/dom": "^10.4.0",
@@ -67,6 +65,7 @@
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
+    "cloudinary": "^2.8.0",
     "dotenv": "^16.0.0",
     "jsdom": "^27.0.0",
     "tsx": "^4.0.0",
@@ -74,22 +73,5 @@
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0"
-  },
-  "pnpm": {
-    "supportedArchitectures": {
-      "os": [
-        "linux"
-      ],
-      "cpu": [
-        "x64",
-        "arm64"
-      ],
-      "libc": [
-        "musl"
-      ]
-    },
-    "ignoredBuiltDependencies": [
-      "sharp"
-    ]
   }
 }
