--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,54 +2,66 @@ services:
   alfanjauhari_com_app:
     image: alfanjauhari/alfanjauhari-com:main
     container_name: alfanjauhari_com_app
+    platform: linux/amd64
     env_file: $RUNTIME_ENV_FILE
-    ports:
-      - :3000
+    expose:
+      - "3000"
     volumes:
       - app_data:/usr/src/app
     networks:
-      - default
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.app.rule=Host(`$TRAEFIK_URL`) || Host(`www.$TRAEFIK_URL`)"
-      - "traefik.http.routers.app.entrypoints=app,appsecure"
-      - "traefik.http.routers.app.tls.certresolver=letsencrypt"
+      - web
     user: "1000"
 
-  alfanjauhari_com_traefik:
-    image: traefik:latest
-    container_name: alfanjauhari_com_traefik
+  alfanjauhari_com_nginx:
+    image: nginx:1.27-alpine
+    container_name: alfanjauhari_com_nginx
+    platform: linux/amd64
+    depends_on:
+      - alfanjauhari_com_app
     environment:
-      CF_DNS_API_TOKEN: $CF_DNS_API_TOKEN
-      TRAEFIK_SSL_EMAIL: $TRAEFIK_SSL_EMAIL
-    command:
-      - "--log.level=DEBUG"
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--entryPoints.app.address=:80"
-      - "--entryPoints.appsecure.address=:443"
-      - "--entryPoints.app.http.redirections.entryPoint.to=appsecure"
-      - "--entryPoints.app.http.redirections.entryPoint.scheme=https"
-      - "--certificatesresolvers.letsencrypt.acme.email=${TRAEFIK_SSL_EMAIL:-hi@alfanjauhari.com}"
-      - "--certificatesresolvers.letsencrypt.acme.storage=/certs/acme.json"
-      - "--certificatesresolvers.letsencrypt.acme.dnschallenge.provider=cloudflare"
-      - "--certificatesresolvers.letsencrypt.acme.dnschallenge.delaybeforecheck=0"
+      APP_URL: ${APP_URL:?Set APP_URL to your apex domain}
+      APP_UPSTREAM: alfanjauhari_com_app:3000
     ports:
       - "80:80"
       - "443:443"
-      - :8080
-    networks:
-      - default
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - traefik-certs:/certs
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/templates:/etc/nginx/templates:ro
+      - ./nginx/snippets:/etc/nginx/snippets:ro
+      - letsencrypt:/etc/letsencrypt:ro
+      - nginx_cache:/var/cache/nginx
+    networks:
+      - web
+    restart: unless-stopped
+
+  alfanjauhari_com_certbot:
+    image: certbot/dns-cloudflare:latest
+    profiles:
+      - certbot
+    environment:
+      CF_DNS_API_TOKEN: ${CF_DNS_API_TOKEN:?Cloudflare DNS API token required}
+      APP_SSL_EMAIL: ${APP_SSL_EMAIL:-hi@alfanjauhari.com}
+      APP_URL: ${APP_URL:?Set APP_URL to your apex domain}
+    volumes:
+      - letsencrypt:/etc/letsencrypt
+      - ./nginx/cloudflare.ini:/etc/letsencrypt/cloudflare.ini:ro
+    command: >
+      certonly
+      --non-interactive
+      --dns-cloudflare
+      --dns-cloudflare-credentials /etc/letsencrypt/cloudflare.ini
+      --dns-cloudflare-propagation-seconds 60
+      --agree-tos -m "$APP_SSL_EMAIL"
+      -d "$APP_URL" -d "www.$APP_URL"
 
 volumes:
   app_data:
     driver: local
-  traefik-certs:
+  letsencrypt:
+    driver: local
+  nginx_cache:
     driver: local
 
 networks:
-  default:
+  web:
     driver: bridge
