--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - alfanjauhari_com_app
       - alfanjauhari_com_certbot
     environment:
-      APP_URL: ${APP_URL:?Set APP_URL to your apex domain}
+      APP_URL: ${APP_URL:-alfanjauhari.com}
       APP_UPSTREAM: alfanjauhari_com_app:3000
     ports:
       - "80:80"
@@ -37,6 +37,8 @@ services:
 
   alfanjauhari_com_certbot:
     image: certbot/dns-cloudflare:latest
+    profiles:
+      - certbot
     environment:
       CF_DNS_API_TOKEN: ${CF_DNS_API_TOKEN:?Cloudflare DNS API token required}
       APP_SSL_EMAIL: ${APP_SSL_EMAIL:-hi@alfanjauhari.com}
