--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -18,6 +18,11 @@ services:
     networks:
       - web
     user: "1000"
+    logging:
+      driver: loki
+      options:
+        loki-url: "http://localhost:3100/loki/api/v1/push"
+        loki-batch-size: "400"
 
   alfanjauhari_com_nginx_dev:
     image: nginx:1.27-alpine
@@ -31,18 +36,53 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/templates/default.conf.template:/etc/nginx/templates/default.conf.template:ro
-      - ./nginx/snippets:/etc/nginx/snippets:ro
+      - ./deploy/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./deploy/nginx/templates/default.conf.template:/etc/nginx/templates/default.conf.template:ro
+      - ./deploy/nginx/snippets:/etc/nginx/snippets:ro
       - nginx_cache:/var/cache/nginx
     networks:
       - web
     restart: unless-stopped
+    logging:
+      driver: loki
+      options:
+        loki-url: "http://localhost:3100/loki/api/v1/push"
+        loki-batch-size: "400"
+
+  alfanjauhari_com_grafana_dev:
+    image: grafana/grafana
+    container_name: alfanjauhari_com_grafana_dev
+    environment:
+      GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD:-admin}
+    ports:
+      - 3001:3000
+    volumes:
+      - grafana_data:/var/lib/grafana
+    networks:
+      - web
+
+  alfanjauhari_com_loki_dev:
+    image: grafana/loki:latest
+    container_name: alfanjauhari_com_loki_dev
+    platform: linux/amd64
+    ports:
+      - "3100:3100"
+    volumes:
+      - ./deploy/loki/loki-config.yml:/etc/loki/local-config.yaml:ro
+      - loki_data:/loki
+    networks:
+      - web
+    restart: unless-stopped
+    command: -config.file=/etc/loki/local-config.yaml
 
 volumes:
   app_data:
     driver: local
   nginx_cache:
+    driver: local
+  grafana_data:
+    driver: local
+  loki_data:
     driver: local
 
 networks:
