feat(analytics): add umami container

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,12 @@ VITE_CLOUDINARY_URL=
 CD_API_KEY=
 CD_API_SECRET=
 CD_CLOUD_NAME=
+
+# # Umami Secret
+# APP_SECRET=
+# DATABASE_URL=
+# # End Umami Secret
+
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
