--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -23,26 +23,71 @@ services:
     image: nginx:1.27-alpine
     container_name: alfanjauhari_com_nginx_dev
     depends_on:
-      - alfanjauhari_com_app_dev
+      alfanjauhari_com_app_dev:
+        condition: service_started
+      alfanjauhari_com_analytics_dev:
+        condition: service_healthy
     environment:
       APP_URL: alfanjauhari.localhost
       APP_UPSTREAM: alfanjauhari_com_app_dev:3000
+      ANALYTICS_UPSTREAM: alfanjauhari_com_analytics_dev:3000
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/templates/default.conf.template:/etc/nginx/templates/default.conf.template:ro
+      - ./nginx/templates/analytics.conf.template:/etc/nginx/templates/analytics.conf.template:ro
       - ./nginx/snippets:/etc/nginx/snippets:ro
       - nginx_cache:/var/cache/nginx
     networks:
       - web
     restart: unless-stopped
 
+  alfanjauhari_com_db_dev:
+    image: postgres:alpine
+    container_name: alfanjauhari_com_db_dev
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB:-postgres}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    restart: always
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    networks:
+      - web
+
+  alfanjauhari_com_analytics_dev:
+    image: ghcr.io/umami-software/umami:latest
+    container_name: alfanjauhari_com_analytics_dev
+    platform: linux/amd64
+    depends_on:
+      alfanjauhari_com_db_dev:
+        condition: service_healthy
+    environment:
+      DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@alfanjauhari_com_db_dev:5432/${POSTGRES_DB:-postgres}
+      APP_SECRET: replace-me-with-a-random-string
+    networks:
+      - web
+    healthcheck:
+      test: ["CMD-SHELL", "curl http://localhost:3000/api/heartbeat"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    init: true
+    restart: always
+
 volumes:
   app_data:
     driver: local
   nginx_cache:
+    driver: local
+  db_data:
     driver: local
 
 networks:
