--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -36,8 +36,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/templates/default.conf.template:/etc/nginx/templates/default.conf.template:ro
-      - ./nginx/templates/analytics.conf.template:/etc/nginx/templates/analytics.conf.template:ro
+      - ./nginx/templates/dev.conf.template:/etc/nginx/templates/dev.conf.template:ro
       - ./nginx/snippets:/etc/nginx/snippets:ro
       - nginx_cache:/var/cache/nginx
     networks:
