--- a/nginx/templates/analytics.conf.template
+++ b/nginx/templates/analytics.conf.template
@@ -1,10 +1,34 @@
+map $http_upgrade $connection_upgrade {
+  default upgrade;
+  ''      close;
+}
+
 server {
   listen 80;
   listen [::]:80;
   server_name analytics.${APP_URL};
+  return 301 https://$host$request_uri;
+}
+
+server {
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
+  server_name analytics.${APP_URL};
+
+  ssl_certificate /etc/letsencrypt/live/${APP_URL}/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/${APP_URL}/privkey.pem;
+  ssl_protocols TLSv1.2 TLSv1.3;
+  ssl_prefer_server_ciphers on;
+  ssl_ciphers HIGH:!aNULL:!MD5;
+  add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload" always;
 
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log warn;
+
+  location /healthz {
+    return 200 'ok';
+    add_header Content-Type text/plain;
+  }
 
   location / {
     proxy_pass http://${ANALYTICS_UPSTREAM};
