--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,11 @@ services:
     image: nginx:1.27-alpine
     container_name: alfanjauhari_com_nginx
     platform: linux/amd64
+    deploy:
+      resources:
+        limits:
+          cpus: 1
+          memory: "512m"
     depends_on:
       alfanjauhari_com_app:
         condition: service_started
@@ -86,6 +91,11 @@ services:
       retries: 5
     init: true
     restart: always
+    deploy:
+      resources:
+        limits:
+          cpus: 1
+          memory: "1g"
 
 volumes:
   app_data:
