feat(auth): initialize login

--- a/.env.example
+++ b/.env.example
@@ -17,9 +17,14 @@ CD_CLOUD_NAME=
 
 # # Umami Secret
 # APP_SECRET=
-# DATABASE_URL=
+# ANALYTICS_DATABASE_URL=
 # # End Umami Secret
 
+# These env needed for setting up the initial postgres container environment variables
+# For another db you can create it by manually running create database through postgres docker container
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=http://localhost:3000
