--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "test": "vitest run",
     "format": "biome format",
     "lint": "biome lint",
-    "check": "biome check"
+    "check": "biome check",
+    "db:kit": "drizzle-kit"
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^2.20.0",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-core": "^0.13.8",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
+    "@tanstack/react-form": "^1.27.6",
+    "@tanstack/react-form-start": "^1.27.6",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
     "@tanstack/react-router": "^1.132.0",
@@ -30,18 +35,21 @@
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
     "@unpic/react": "^1.0.1",
+    "better-auth": "^1.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.45.1",
     "lenis": "^1.3.15",
     "lucide-react": "^0.554.0",
     "mime": "^4.1.0",
     "motion": "^12.23.24",
+    "nanoid": "^5.1.6",
     "nitro": "latest",
+    "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
-    "tw-animate-css": "^1.3.6",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^4.1.11"
   },
@@ -62,13 +70,16 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^22.10.2",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
     "cloudinary": "^2.8.0",
     "dotenv": "^16.0.0",
+    "drizzle-kit": "^0.31.8",
     "jsdom": "^27.0.0",
     "tsx": "^4.0.0",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
