fix(deploy): ssh sync

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,14 @@ jobs:
           path: content
           key: content-${{ runner.os }}-${{ env.CONTENT_SHA }}
 
+      - name: Setup SSH for private content repo
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.PRIVATE_CONTENT_REPO_SSH }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+
       - name: Sync private contents
         run: ./scripts/sync-contents.sh
         env:
