fix(deps): pin tanstack start and deps to certain version

--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
     "@tanstack/react-form-start": "^1.27.6",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
-    "@tanstack/react-router": "^1.144.0",
-    "@tanstack/react-router-devtools": "^1.132.0",
+    "@tanstack/react-router": "1.136.18",
+    "@tanstack/react-router-devtools": "1.136.18",
     "@tanstack/react-router-ssr-query": "^1.131.7",
-    "@tanstack/react-start": "^1.144.0",
-    "@tanstack/router-plugin": "^1.132.0",
+    "@tanstack/react-start": "1.136.18",
+    "@tanstack/router-plugin": "1.136.18",
     "@tanstack/zod-adapter": "^1.143.11",
     "@tiptap/pm": "^3.14.0",
     "@tiptap/react": "^3.14.0",
