chore: try sync scripts

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build": "pnpm build:content && pnpm build:og && vite build && pnpm upload",
     "build:content": "content-collections build",
     "build:og": "tsx ./scripts/generate-og.tsx",
+    "build:scripts": "esbuild scripts/sync-contents-db.mjs --bundle --outfile=scripts/sync-contents-db.cjs --platform=node",
     "sync:content": "./scripts/sync-contents.sh",
-    "sync:content-db": "tsx -r dotenv/config ./scripts/sync-contents-db.ts",
+    "sync:content-db": "node -r dotenv/config ./scripts/sync-contents-db.mjs",
     "upload": "tsx ./scripts/upload-assets.ts",
     "serve": "vite preview",
     "test": "vitest run",
@@ -113,6 +114,7 @@
     "cloudinary": "^2.8.0",
     "dotenv": "^16.0.0",
     "drizzle-kit": "^0.31.8",
+    "esbuild": "^0.27.2",
     "jsdom": "^27.0.0",
     "tsx": "^4.0.0",
     "tw-animate-css": "^1.3.6",
