--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,7 @@ jobs:
             VITE_SITE_URL=${{ vars.VITE_SITE_URL }}
             CD_CLOUD_NAME=${{ vars.CD_CLOUD_NAME }}
             VITE_CLOUDINARY_URL=${{ vars.VITE_CLOUDINARY_URL }}
+            BETTER_AUTH_URL=${{ vars.BETTER_AUTH_URL }}
           secrets: |
             CD_API_KEY=${{ secrets.CD_API_KEY }}
             CD_API_SECRET=${{ secrets.CD_API_SECRET }}
