--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "build": "pnpm build:content && pnpm build:og && vite build && pnpm upload",
     "build:content": "content-collections build",
     "build:og": "tsx ./scripts/generate-og.tsx",
-    "build:scripts": "esbuild scripts/sync-contents-db.mjs --bundle --outfile=scripts/sync-contents-db.cjs --platform=node",
-    "sync:content": "./scripts/sync-contents.sh",
-    "sync:content-db": "node -r dotenv/config ./scripts/sync-contents-db.mjs",
+    "build:scripts": "esbuild scripts/sync-contents-db.ts --bundle --packages=external --outfile=scripts/sync-contents-db.cjs --platform=node",
+    "sync:content": "pnpm build:scripts && node scripts/sync-contents-db.cjs",
     "upload": "tsx ./scripts/upload-assets.ts",
     "serve": "vite preview",
     "test": "vitest run",
