--- a/nginx/templates/analytics.conf.template
+++ b/nginx/templates/analytics.conf.template
@@ -30,6 +30,13 @@ server {
     add_header Content-Type text/plain;
   }
 
+  location /assets/ {
+    proxy_pass http://${ANALYTICS_UPSTREAM};
+
+    include /etc/nginx/snippets/headers.conf;
+    include /etc/nginx/snippets/cache-static.conf;
+  }
+
   location / {
     proxy_pass http://${ANALYTICS_UPSTREAM};
 
