feat: initialize member pages

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,6 @@ POSTGRES_PASSWORD=
 
 BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=http://localhost:3000
+
+# Change this to your email admin. So the app can be determine which account with admin email. You can add more than one email with comma separated value, e.g. admin@gmail.com,admin2@gmail.com
+ADMIN_EMAIL=
