--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "1.136.18",
     "@tanstack/router-plugin": "1.136.18",
+    "@tanstack/start-static-server-functions": "1.136.18",
     "@tanstack/zod-adapter": "^1.143.11",
     "@tiptap/pm": "^3.14.0",
     "@tiptap/react": "^3.14.0",
