--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,5 +21,10 @@ http {
 
   proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=app_cache:10m max_size=1g inactive=30m use_temp_path=off;
 
+  map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+  }
+
   include /etc/nginx/conf.d/*.conf;
 }
