--- a/nginx/templates/analytics.conf.template
+++ b/nginx/templates/analytics.conf.template
@@ -1,8 +1,3 @@
-map $http_upgrade $connection_upgrade {
-  default upgrade;
-  ''      close;
-}
-
 server {
   listen 80;
   listen [::]:80;
@@ -11,8 +6,8 @@ server {
 }
 
 server {
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
+  listen 443 ssl;
+  listen [::]:443 ssl;
   server_name analytics.${APP_URL};
 
   ssl_certificate /etc/letsencrypt/live/${APP_URL}/fullchain.pem;
